---
source: polychem/src/chemical_database.rs
description: res
expression: out
---
  × error parsing KDL

Error:   × Scale exceeds the maximum precision allowed: 42 > 28
   ╭─[test:1:10]
 1 │ lossless 1e-42
   ·          ──┬──
   ·            ╰── invalid value
   ╰────

